kubernetes/apps/gaspard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gaspard
  labels:
    pod-security.kubernetes.io/enforce: restricted
